eks/deployment.yaml
# describe how we want the container to be deployed
# manual deployment : kubectl apply -f eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment-k8s
  labels:
    app: simple-bank-api
spec:
  replicas: 2             # number of pods running same template
  selector:              
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 354885450543.dkr.ecr.eu-central-1.amazonaws.com/simplebank:latest
        imagePullPolicy: Always   # ensure that K*S will always pull the latest image from ECR, before deploying new containers
        ports:
        - containerPort: 8080
